<resources>
    <string name="app_name">Quiz</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_quiz_category">Quiz Category</string>

    <string name="title_section1">Quiz Category</string>
    <string name="title_section2">Change Logo</string>
    <string name="title_section3">Change Category Name</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="score_hint">*Each correct answer is equal to 20 points.</string>
    <string name="title_activity_navigation_drawer">Quiz</string>
    <string name="question_hint">Type your question here...</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>

    <string name="answer">Choose Answer</string>
    <string name="add_a_question">Add A Question</string>
    <string name="delete_a_question">Delete Question</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="ok">Ok</string>
    <string name="change">Change</string>
    <string name="current_name">Current Name</string>
    <string name="new_name">New Name</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
